button border fix on mobile

--- a/web/themes/custom/myusf/sass/src/partials/_typography.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_typography.scss
@@ -518,7 +518,7 @@ div#___gcse_1 {
 			}
 		}
 		.gsc-cursor-box.gs-bidi-start-align {
-			border-top: 0!important;
+			/*border-top: 0!important;*/
 
 			.gsc-cursor-page {
 				margin-right: 18px;
